--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,6 @@ osx_image: xcode7.3
 env:
     - ACTION=test  PLATFORM=iOS     DESTINATION='platform=iOS Simulator,name=iPhone 6S'
 script:
-    - set -o pipefail && xcodebuild -scheme HandyJSONTests -destination "$DESTINATION" $ACTION | xcpretty
+    - set -o pipefail && xcodebuild -scheme 'HandyJSON iOS Tests' -destination "$DESTINATION" $ACTION | xcpretty
 after_success:
     - bash <(curl -s https://codecov.io/bash)
