--- a/HandyJSON.xcodeproj/xcshareddata/xcschemes/HandyJSON iOS.xcscheme
+++ b/HandyJSON.xcodeproj/xcshareddata/xcschemes/HandyJSON iOS.xcscheme
@@ -15,8 +15,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "21520C431D3341B200F53111"
-               BuildableName = "HandyJSON.framework"
-               BlueprintName = "HandyJSON"
+               BuildableName = "HandyJSON iOS.framework"
+               BlueprintName = "HandyJSON iOS"
                ReferencedContainer = "container:HandyJSON.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -46,8 +46,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "21520C431D3341B200F53111"
-            BuildableName = "HandyJSON.framework"
-            BlueprintName = "HandyJSON"
+            BuildableName = "HandyJSON iOS.framework"
+            BlueprintName = "HandyJSON iOS"
             ReferencedContainer = "container:HandyJSON.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -64,8 +64,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "21520C431D3341B200F53111"
-            BuildableName = "HandyJSON.framework"
-            BlueprintName = "HandyJSON"
+            BuildableName = "HandyJSON iOS.framework"
+            BlueprintName = "HandyJSON iOS"
             ReferencedContainer = "container:HandyJSON.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
