--- a/HandyJSON.xcodeproj/xcshareddata/xcschemes/HandyJSON iOS.xcscheme
+++ b/HandyJSON.xcodeproj/xcshareddata/xcschemes/HandyJSON iOS.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "21520C431D3341B200F53111"
-               BuildableName = "HandyJSON iOS.framework"
+               BuildableName = "HandyJSON.framework"
                BlueprintName = "HandyJSON iOS"
                ReferencedContainer = "container:HandyJSON.xcodeproj">
             </BuildableReference>
@@ -46,7 +46,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "21520C431D3341B200F53111"
-            BuildableName = "HandyJSON iOS.framework"
+            BuildableName = "HandyJSON.framework"
             BlueprintName = "HandyJSON iOS"
             ReferencedContainer = "container:HandyJSON.xcodeproj">
          </BuildableReference>
@@ -64,7 +64,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "21520C431D3341B200F53111"
-            BuildableName = "HandyJSON iOS.framework"
+            BuildableName = "HandyJSON.framework"
             BlueprintName = "HandyJSON iOS"
             ReferencedContainer = "container:HandyJSON.xcodeproj">
          </BuildableReference>
