--- a/HandyJSON.xcodeproj/xcshareddata/xcschemes/HandyJSON macOS.xcscheme
+++ b/HandyJSON.xcodeproj/xcshareddata/xcschemes/HandyJSON macOS.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "393E0FE01DA2494F00B3BC12"
-               BuildableName = "HandyJSON macOS.framework"
+               BuildableName = "HandyJSON.framework"
                BlueprintName = "HandyJSON macOS"
                ReferencedContainer = "container:HandyJSON.xcodeproj">
             </BuildableReference>
@@ -43,7 +43,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "393E0FE01DA2494F00B3BC12"
-            BuildableName = "HandyJSON macOS.framework"
+            BuildableName = "HandyJSON.framework"
             BlueprintName = "HandyJSON macOS"
             ReferencedContainer = "container:HandyJSON.xcodeproj">
          </BuildableReference>
@@ -65,7 +65,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "393E0FE01DA2494F00B3BC12"
-            BuildableName = "HandyJSON macOS.framework"
+            BuildableName = "HandyJSON.framework"
             BlueprintName = "HandyJSON macOS"
             ReferencedContainer = "container:HandyJSON.xcodeproj">
          </BuildableReference>
@@ -83,7 +83,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "393E0FE01DA2494F00B3BC12"
-            BuildableName = "HandyJSON macOS.framework"
+            BuildableName = "HandyJSON.framework"
             BlueprintName = "HandyJSON macOS"
             ReferencedContainer = "container:HandyJSON.xcodeproj">
          </BuildableReference>
