--- a/HandyJSON.xcodeproj/xcshareddata/xcschemes/HandyJSON.xcscheme
+++ b/HandyJSON.xcodeproj/xcshareddata/xcschemes/HandyJSON.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0820"
+   LastUpgradeVersion = "9999"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "21520C5A1D3344A900F53111"
-               BuildableName = "HandyJSONDemo.app"
-               BlueprintName = "HandyJSONDemo"
+               BlueprintIdentifier = "OBJ_48"
+               BuildableName = "HandyJSON.framework"
+               BlueprintName = "HandyJSON"
                ReferencedContainer = "container:HandyJSON.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -28,16 +28,17 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "OBJ_79"
+               BuildableName = "HandyJSONTests.xctest"
+               BlueprintName = "HandyJSONTests"
+               ReferencedContainer = "container:HandyJSON.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "21520C5A1D3344A900F53111"
-            BuildableName = "HandyJSONDemo.app"
-            BlueprintName = "HandyJSONDemo"
-            ReferencedContainer = "container:HandyJSON.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </TestAction>
@@ -51,23 +52,15 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "21520C5A1D3344A900F53111"
-            BuildableName = "HandyJSONDemo.app"
-            BlueprintName = "HandyJSONDemo"
+            BlueprintIdentifier = "OBJ_48"
+            BuildableName = "HandyJSON.framework"
+            BlueprintName = "HandyJSON"
             ReferencedContainer = "container:HandyJSON.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
-      <EnvironmentVariables>
-         <EnvironmentVariable
-            key = "OS_ACTIVITY_MODE"
-            value = "disable"
-            isEnabled = "YES">
-         </EnvironmentVariable>
-      </EnvironmentVariables>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
@@ -77,16 +70,6 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "21520C5A1D3344A900F53111"
-            BuildableName = "HandyJSONDemo.app"
-            BlueprintName = "HandyJSONDemo"
-            ReferencedContainer = "container:HandyJSON.xcodeproj">
-         </BuildableReference>
-      </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
